--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,17 @@
 body {
     @apply bg-slate-100;
 }
+
+.embla {
+    overflow: hidden;
+}
+
+.embla__container {
+    display: flex;
+}
+
+.embla__slide {
+    position: relative;
+    flex: 0 0 100%;
+    min-width: 0;
+}
